<resources>
    <string name="app_name">TransEspol</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_principal">Principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Menú de la app -->

    <string name="home">Inicio</string>
    <string name="where">¿Dónde estoy?</string>
    <string name="interno">Interno</string>
    <string name="rutas_ingreso">Rutas Ingreso</string>
    <string name="rutas_salida">Rutas Salida</string>
    <string name="alban">Alban Borja</string>
    <string name="norte">Norte</string>
    <string name="sur">Sur</string>
    <string name="acacias">Acacias</string>
    <string name="duran">Durán</string>
    <string name="orquideas">Orquideas</string>
    <string name="perimetral">Perimetras</string>
    <string name="portete">Portete</string>
    <string name="norte1">Norte 1</string>
    <string name="norte2">Norte 2</string>
    <string name="norte3">Norte 3</string>
    <string name="comunity">Comunidad</string>
    <string name="perdidos">Objetos Perdidos</string>
    <string name="coments">Comentarios</string>
    <string name="acerca_de">Acerca de</string>
    <string name="logout">Cerrar Sesión</string>

    <!--Acerca de-->
    <string name="developers">DESARROLLADORES</string>
    <string name="developer1">John Cedeño</string>
    <string name="developer2">Luis Jácome</string>
    <string name="developer3">Juan García</string>
    <string name="developer4">Luis Andrade</string>

    <string name="facebook_app_id">1302351523137099</string>
    <string name="login_fb">Login con Facebook</string>
    <string name="login_google">Login con Google</string>

    <string name="google_app_id">AIzaSyDqC4y0Pu3OoOvmfOfViJcpFVty7hiRk2E</string>
    <string name="google_maps">AIzaSyD3Dk1I_d5qsuqI88SqLPpQUCRM24XpH1s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detalles">Detalles Producto</string>

    <string name="url_perdidos">http://transespol.herokuapp.com/api/objetos</string>

</resources>
