<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_ubicacion"
            android:icon="@drawable/ic_position"
            android:title="@string/where" />

        <item
            android:id="@+id/nav_entrada"
            android:icon="@drawable/ic_busin"
            android:title="@string/rutas_ingreso" />

        <item
            android:id="@+id/nav_salida"
            android:icon="@drawable/ic_busout"
            android:title="@string/rutas_salida" />

    </group>

    <item
        android:id="@+id/section_comun"
        android:title="@string/comunity">
        <menu>
            <item
                android:id="@+id/nav_comunidad_perdidos"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/perdidos" />

            <item
                android:id="@+id/nav_comunidad_coment"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/coments" />
        </menu>
    </item>

    <item
        android:id="@+id/section_config"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_acerca_de"
                android:icon="@drawable/ic_about"
                android:title="@string/acerca_de" />

            <item
                android:id="@+id/nav_cerrar"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>



</menu>
