<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_acerca_de" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/icon_acerca_de"
        android:layout_height="@dimen/icon_acerca_de"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/title_developer_top"
        android:src="@drawable/espol" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/title_developer_top"
        android:text="@string/developers"
        android:textColor="@color/white"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/name_developer_top"
        android:text="@string/developer1"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/name_developer_top"
        android:text="@string/developer2"
        android:textColor="@color/white"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/name_developer_top"
        android:text="@string/developer3"
        android:textColor="@color/white"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/name_developer_top"
        android:text="@string/developer4"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>